[package]
name = "hl7-parser"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
version = "0.0.1"
edition = "2021"

[dependencies]
nom = "7"
nom_locate = "4"
thiserror = "1"
time = "0.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "parse_buf"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "locate"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "timestamp"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
