[package]
name = "hl7-parser"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
version = "0.0.1"
edition = "2021"
description = "Parses the structure of HL7v2 messages, but does not validate the correctness of the messages."
documentation = "https://docs.rs/hl7-parser"
repository = "https://github.com/hamaluik/hl7-parser"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
indexmap = { version = "2.1.0", features = ["serde"] }
nom = "7"
nom_locate = "4"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
time = "0.3"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.4"
serde = "1"
serde_json = "1"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "parse_buf"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "locate"
harness = false

[[bench]]
name = "query"
harness = false

[[bench]]
name = "timestamp"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
