[package]
name = "hl7-parser"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
version = "0.3.0"
edition = "2021"
description = "Parses the structure of HL7v2 messages, but does not validate the correctness of the messages."
documentation = "https://docs.rs/hl7-parser"
repository = "https://github.com/hamaluik/hl7-parser"
readme = "README.md"
license = "Apache-2.0"
keywords = ["hl7", "health", "parse", "parser"]
categories = ["parser-implementations", "science"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
nom = "7"
nom_locate = "4"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
time = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = []
serde = ["dep:serde"]
time = ["dep:time"]
chrono = ["dep:chrono"]

[dev-dependencies]
criterion = "0.4"
serde = "1"
serde_json = "1"
pretty_assertions_sorted = "1.2"

# [[bench]]
# name = "parse"
# harness = false
#
# [[bench]]
# name = "parse_buf"
# harness = false
#
# [[bench]]
# name = "decode"
# harness = false
#
# [[bench]]
# name = "locate"
# harness = false
#
# [[bench]]
# name = "query"
# harness = false
#
# [[bench]]
# name = "timestamp"
# harness = false
#
# [profile.release]
# debug = true
#
# [profile.bench]
# debug = true

[package.metadata.docs.rs]
all-features = true

